test/expected/explain_o_new_z_z.out
explain std::size_t operator new( std::size_t )
        ^
9: error: operator new must return a pointer to void
